--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,15 @@
+12.25 【今日阅读】https://cacm.acm.org/magazines/2023/1/267976-the-end-of-programming/fulltext Programming will be obsolete. I believe the conventional idea of "writing a program" is headed for extinction, and indeed, for all but very specialized applications, most software, as we know it, will be replaced by AI systems that are trained rather than programmed.
+
+12.24 【今日阅读】https://minimalmodeling.com/ Minimal Modeling approach: We use a simple logical modeling approach inspired by Anchor Modeling. We document the database by dissecting it into anchors, attributes and links, and also derived data and some textual narratives.
+
+12.23 【今日阅读】https://devos50.github.io/blog/2022/ipod-touch-qemu/ Emulating an iPod Touch 1G and iPhoneOS 1.0 using QEMU (Part I)
+
+12.22 【今日阅读】https://mdalmijn.com/p/11-laws-of-software-estimation-for-complex-work 11 Laws of Software Estimation for Complex Work
+
+12.21 【今日阅读】https://www.b-list.org/weblog/2022/dec/19/boring-python-code-quality/ I don’t mean “reliable” or “bug-free” or “no incidents”. While there is some overlap, and some of the things I’ll be recommending can help to reduce bugs, I also want to be clear: there will be bugs. There will be incidents where a feature or maybe an entire service is down. “Boring”, to me, is about the sources of those incidents.
+
+12.20 【今日阅读】https://mp.weixin.qq.com/s/WrPAL9qQbXFihLfVnepY3g 本文作者从微信团队维护的带货类项目所遇卡点出发，尝试用领域驱动设计方法（简称DDD），保障在快节奏、多人协作的项目迭代中，维持系统的可维护性、可拓展性、高内聚低耦合和稳定性。作者首先剖解相关概念原理，之后代入亲身参与的微信团队实际项目、围绕DDD方法进行优化实操。
+
 12.19 【今日阅读】https://inspirezone.tech/9-indispensable-rules-for-debugging-software-and-hardware/ 9 Indispensable Rules for Debugging Software and Hardware (Book review)
 
 12.18 【今日阅读】https://codersatwork.com/ Based on nearly eighty hours of conversations with fifteen all-time great programmers and computer scientists, the Q&A interviews in Coders at Work provide a multifaceted view into how great programmers learn to program, how they practice their craft, and what they think about the future of programming.
