--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,25 @@
+12.31 【今日阅读】https://fasterthanli.me/articles/lies-we-tell-ourselves-to-keep-using-golang Here's a list of lies we tell ourselves to keep using Golang:
+
+* Others use it, so it must be good for us too
+* Everyone who has concerns about it is an elitist jerk
+* Its attractive async runtime and GC make up for everything else
+* Every language design flaw is ok in isolation, and ok in aggregate too
+* We can overcome these by "just being careful" or adding more linters/eyeballs
+* Because it's easy to write, it's easy to develop production software with
+* Because the language is simple, everything else is, too
+* We can do just a little of it, or just at first, or we can move away from it easily
+* We can always rewrite it later
+
+12.30 【今日阅读】https://paroj.github.io/gltut/Further%20Study.html#idp13031 Debugging OpenGL code is very difficult. Frequently when there is a bug in graphics code, the result is a massively unhelpful blank screen. If the problem is localized to a single shader or state used to render an object, the result is a black object or general garbage. Compounding this problem is the fact that OpenGL has a lot of global state. One of the reasons this book will often bind objects, do something with them, and then unbind them, is to reduce the amount of state dependencies. It ensures that every object is rendered with a specific program, a set of textures, a certain VAO, etc. It may be slightly slower to do this, but for a simple application, getting it working is more important.
+
+12.29 【今日阅读】https://www.usenix.org/conference/nsdi15/technical-sessions/presentation/agarwal Succinct is a data store that enables efficient queries directly on a compressed representation of the input data. Succinct uses a compression technique that allows random access into the input, thus enabling efficient storage and retrieval of data. In addition, Succinct natively supports a wide range of queries including count and search of arbitrary strings, range and wildcard queries. What differentiates Succinct from previous techniques is that Succinct supports these queries without storing indexes — all the required information is embedded within the compressed representation.
+
+12.28 【今日阅读】https://www.youtube.com/watch?v=dH7QUdXeVrI Using CHERI's mechanisms, software can efficiently implement fine-grained, reliable, spatial, and temporal memory protection and scalable compartmentalization without needing to resort to MMU-based isolation. Though common wisdom holds that hardware capability systems are impractical, CHERI achieves its goals with low overheads while retaining compatibility with C, including modern features such as dynamic linking and thread-local storage.
+
+12.27 【今日阅读】https://www.youtube.com/watch?v=7hdJQkn8rtA Critical Program Reading (1975) - 16mm Film
+
+12.26 【今日阅读】https://www.jamesshore.com/v2/projects/testing-without-mocks/testing-without-mocks Testing Without Mocks: A Pattern Language. Foundational Patterns; Architectural Patterns; Logic Patterns; Infrastructure Patterns; Nullability Patterns; Legacy Code Patterns
+
 12.25 【今日阅读】https://cacm.acm.org/magazines/2023/1/267976-the-end-of-programming/fulltext Programming will be obsolete. I believe the conventional idea of "writing a program" is headed for extinction, and indeed, for all but very specialized applications, most software, as we know it, will be replaced by AI systems that are trained rather than programmed.
 
 12.24 【今日阅读】https://minimalmodeling.com/ Minimal Modeling approach: We use a simple logical modeling approach inspired by Anchor Modeling. We document the database by dissecting it into anchors, attributes and links, and also derived data and some textual narratives.
