--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,17 @@
+1.7 【今日阅读】https://quick-lint-js.com/blog/cpp-vs-rust-build-times/ Are compilation times a problem with Rust? Yes.  Are build times as bad with Rust as with C++? Yes.
+
+1.6 【今日阅读】https://buttondown.email/hillelwayne/archive/why-modeling-finds-bugs-without-model-checking/ In other words, writing lets us keep track of more things. In the case of large systems, “more things” means more interactions between complex components. This is why even writing down specifications in English helps a lot. Formal specification languages just push that further by encoding intricate components more densely, which helps us chunk them up.
+
+1.5 【今日阅读】https://lobste.rs/s/cwkbyg/first_public_release_pushup_new_compiler Pushup is a mix of a new syntax consisting of Pushup directives and keywords, Go code, and HTML markup.
+
+1.4 【今日阅读】https://blogs.newardassociates.com/blog/2023/you-want-modules-not-microservices.html You Want Modules, Not Microservices. Dissecting why everybody keeps talking about microservices.
+
+1.3 【今日阅读】https://mp.weixin.qq.com/s/3k-dtYHmyjFlX2BcnrtaQQ 今年是《敏捷宣言》签署的第20个年头。与Scrum认证和“敏捷教练”头衔满天飞的热闹情形相对，国内的敏捷社区倒是流行起了一种略显悲观的“失败论”。不论将“失败”归因于敏捷理论、敏捷的布道者、还是敏捷的实践者，很显然，越来越多的人开始意识到，尽管“敏捷”这个漂亮的词受到了IT行业的广泛青睐，但行业的总体能力——正如笔者在《敏捷中国史话》中所发现的——提升非常有限。大部分企业、团队和个人仍在低能力水平上挣扎，与现代商业环境所期望的数字化能力之间的差距不但没有缩小、反而有不断扩大的趋势。
+
+1.2 【今日阅读】https://saaramar.github.io/memory_safety_blogpost_2022/ Survey of security mitigations and architectures: Hardware solutions, Software mitigations, Safe programming languages
+
+1.1 【今日阅读】https://spindas.dreamwidth.org/4207.html Who needs a backend? ChatGPT as the universal Redux reducer
+
 12.31 【今日阅读】https://fasterthanli.me/articles/lies-we-tell-ourselves-to-keep-using-golang Here's a list of lies we tell ourselves to keep using Golang:
 
 * Others use it, so it must be good for us too
