--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,25 @@
+1.18 【今日阅读】https://www.metalevel.at/prolog/debugging The methods are based on declarative ways of reading Prolog programs, exploiting logical properties to quickly narrow down mistakes. We call this approach declarative debugging.
+
+1.17 【今日阅读】https://verdagon.dev/blog/when-to-use-memory-safe-part-2 How Memory Safety Approaches Speed Up and Slow Down Development Velocity
+
+1.16 【今日阅读】https://chriswarrick.com/blog/2023/01/15/how-to-improve-python-packaging/ There is an area of Python that many developers have problems with. This is an area that has seen many different solutions pop up over the years, with many different opinions, wars, and attempts to solve it. Many have complained about the packaging ecosystem and tools making their lives harder. Many beginners are confused about virtual environments. But does it have to be this way? Are the current solutions to packaging problems any good? And is the organization behind most of the packaging tools and standards part of the problem itself?
+
+1.15 【今日阅读】https://hoho.com/posts/your-stack-is-not-the-product/ Ship the product. Frequently and reliably. Support growth. Be able to bring in more people, gradually, that can do (1).
+
+1.14 【今日阅读】https://dusted.codes/the-type-system-is-a-programmers-best-friend Good types can prevent bugs, Rich types protect you from future mistakes, Smart types can prevent unwanted side effects
+
+1.13 【今日阅读】https://blog.janestreet.com/the-joy-of-expect-tests/ I hope this post encourages more people to try the “snapshot” style of testing. My own experience with it is that I never want to go back to a workflow where my computer isn’t finishing my tests for me.
+
+1.12 【今日阅读】https://futureofcoding.org/episodes/061 Programming as Theory Building by Peter Naur
+
+1.11 【今日阅读】https://lucasfcosta.com/2022/09/15/deadlines.html Short-term profits are not a reliable indicator of the performance of management. Anybody can pay dividends by deferring maintenance, cutting out research, or acquiring another company. — Deming, W. Edwards. Out of the Crisis, reissue (p. 19). MIT Press. Kindle Edition.
+
+1.10 【今日阅读】https://buttondown.email/hillelwayne/archive/in-defense-of-testing-mocks/ In Defense of Testing Mocks
+
+1.9 【今日阅读】https://henrikwarne.com/2023/01/07/there-is-no-software-maintenance/ let’s stop talking about software maintenance is if it were a separate activity. It is not. It is just software development.
+
+1.8 【今日阅读】https://mike.zwobble.org/2023/01/reflections-on-testing-without-mocks/ Question #1: which parts of the system do you replace with test doubles? Question #2: how do we make the test doubles?  Question #3: who's responsible for making the test doubles?
+
 1.7 【今日阅读】https://quick-lint-js.com/blog/cpp-vs-rust-build-times/ Are compilation times a problem with Rust? Yes.  Are build times as bad with Rust as with C++? Yes.
 
 1.6 【今日阅读】https://buttondown.email/hillelwayne/archive/why-modeling-finds-bugs-without-model-checking/ In other words, writing lets us keep track of more things. In the case of large systems, “more things” means more interactions between complex components. This is why even writing down specifications in English helps a lot. Formal specification languages just push that further by encoding intricate components more densely, which helps us chunk them up.
