--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+2.6 【今日阅读】https://www.worldofbs.com/minimize-state/ All Programming Philosophies Are About State
+
+1.19 【今日阅读】https://uptrace.dev/blog/posts/go-memory-arena.html Go 1.20 release added new experimental arena package that provides memory arenas. This article explains what memory arenas are and how you can use them to reduce garbage collection overhead and make your programs faster.
+
 1.18 【今日阅读】https://www.metalevel.at/prolog/debugging The methods are based on declarative ways of reading Prolog programs, exploiting logical properties to quickly narrow down mistakes. We call this approach declarative debugging.
 
 1.17 【今日阅读】https://verdagon.dev/blog/when-to-use-memory-safe-part-2 How Memory Safety Approaches Speed Up and Slow Down Development Velocity
