--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,17 @@
+2.13 【今日阅读】https://en.m.wikipedia.org/wiki/Heisenbug In computer programming jargon, a heisenbug is a software bug that seems to disappear or alter its behavior when one attempts to study it.
+
+2.12 【今日阅读】https://www.rapitasystems.com/blog/what-really-happened-software-mars-pathfinder-spacecraft The Mars Pathfinder spacecraft experienced a series of total system resets due to a priority inversion caused by a long-running communications task. Engineers were able to diagnose and fix the problem by turning on a boolean parameter that indicates whether priority inheritance should be performed by the mutex. This was made possible by the presence of a C language interpreter in the system, which allowed them to upload a short C program to the spacecraft. The solution to the problem was first identified in a paper by L. Sha, R. Rajkumar, and J. P. Lehoczky in 1990, and all three authors were present at the keynote address where the story was told. This story highlights the importance of detailed traces of system behavior for diagnosing problems, as well as the value of having debugging facilities in the system.
+
+2.11 【今日阅读】https://paperless.blog/we-need-programming-mentors Mentoring is an essential part of advancing the art of programming, as it allows experienced developers to pass on their hard-earned knowledge to the next generation. Without this, each generation would have to go through the same mistakes and take longer to advance the state of the art. Examples of mistakes include using text editors without knowledge of the code base, not knowing the weaknesses of different technologies, not knowing the real side effects of having a good test suite, not knowing when to refactor, and not knowing how to name things. Mentoring is the best way to impart this knowledge, as it allows for relevant suggestions to be given in the moment and for in-depth explanations when a quick hint is not enough.
+
+2.10 【今日阅读】https://pernos.co/examples/use-after-free Debugging a use-after-free in gdb with Pernosco involves capturing a recording of the bug, examining the instructions executed, and tracing the dataflow of the pointer in question. In this case, the pointer was stored in gdb_stdout and later destroyed by a std::unique_ptr, leaving gdb_stdout as a dangling pointer. After examining the code, it was found that logfile was stored as a raw pointer in gdb_stdout without taking ownership of it, leading to the use-after-free bug. It is interesting to note that Pernosco was able to quickly identify the source of the bug and provide a detailed explanation of the bug's cause.
+
+2.9 【今日阅读】https://github.com/golang/go/issues/57175 As the Go user base grows, more and more Go developers are seeking to understand the performance of their programs and reduce resource costs. However, they are locked into the relatively limited diagnostic tools we provide today. Some teams build their own tools, but right now that requires a large investment. This issue extends to the Go team as well, where we often put significant effort into ad-hoc performance tooling to analyze the performance of Go itself.
+
+2.8 【今日阅读】https://www.adaptivecapacitylabs.com/blog/2018/03/23/moving-past-shallow-incident-data/ This is why we started Adaptive Capacity Labs: to demonstrate that meaningful insight comes from studying how real people do real work under real conditions. Does your company rely on shallow data like above? What investments in deeper analytical methods have they made? Take a look at what we do to assess your company’s capacity to learn in these ways.
+
+2.7 【今日阅读】https://www.endpointdev.com/blog/2023/02/migration-tips-and-tricks/ Data Migration Tips
+
 2.6 【今日阅读】https://www.worldofbs.com/minimize-state/ All Programming Philosophies Are About State
 
 1.19 【今日阅读】https://uptrace.dev/blog/posts/go-memory-arena.html Go 1.20 release added new experimental arena package that provides memory arenas. This article explains what memory arenas are and how you can use them to reduce garbage collection overhead and make your programs faster.
