--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,35 @@
+2.26 【今日阅读】http://wrigstad.com/oracle/ludvig_thesis.pdf The information saved in the snapshot is only valuable insofar as references
+and pointers will keep their meaning when restored. For many kinds of references and pointers, this is not directly the case. What broad categories do we have, and what solutions exist? The issue is twofold: 1) Are references to each entity valid upon restoring, and 2) If not, can all the references to it be identified and updated?
+
+2.25 【今日阅读】https://www.maxcountryman.com/articles/let-it-fail Yeah. You will destroy yourself if you try to fix everything on overtime. When things stay broken for a while, people suddenly get some appreciation for all the systems that “magically “ just work all the time. Suddenly there’s talk about scheduled maintenance and which resources are assigned to keep things running.
+
+2.24 【今日阅读】https://samsartor.com/guis-1/ Around 4 years ago while working on SketchUp Web (an interesting mix of legacy C++ and shiny VueJS) I got the idea to try making a Vue/MobX-style reactivity system in Rust. I wasn’t so concerned with rendering or layout. All I wanted was a way to mutate random stuff in closures, and then have everything else update automatically. That turned out to be hard.
+
+2.23 【今日阅读】https://capitalex.codeberg.page/give-me-flexibility-and-give-me-types/ Give Me Flexibility *and* Give Me Types.
+
+2.22 【今日阅读】https://m.youtube.com/watch?v=XjwJeHRa53A Why You Don't Trust Your Linter
+
+2.21 【今日阅读】https://zhuanlan.zhihu.com/p/607798970 所以我相信，AI不仅仅会干掉大量的低端岗位。同时因为AI辅助，使得大量初级程序员可以代替高级程序员，从而极大削弱这些年迈程序员原本就不多的议价空间。我们除了拥抱变化，别无选择。
+
+2.20 【今日阅读】https://blog.trailofbits.com/2019/11/11/test-case-reduction/ Imagine reducing the amount of code and time needed to test software, while at the same time increasing the efficacy of your tests and making your debugging tasks easier—all with minimal human effort. It seems too good to be true, but we’re going to explain how test-case reduction can do all this (and maybe more).
+
+2.19 【今日阅读】https://mp.weixin.qq.com/s/Jxw34Kt66xDyxbtpEv_V_g piglei 对 14 年工作经验的总结
+
+2.18 【今日阅读】https://www.functionize.com/blog/the-top-10-test-cases-that-benefit-from-ai-power Modern web applications need a different approach to testing. Here, we see how AI-powered solutions increase the number and type of tests you can automate. The top 10 test cases that benefit from AI power
+
+2.17 【今日阅读】https://martinfowler.com/articles/retrospective-antipatterns.html Retrospectives Antipatterns
+
+2.16 【今日阅读】https://www.warp.dev/blog/why-is-building-a-ui-in-rust-so-hard Rust 对指针的限制太严格了，所以我们用 EntityId 来代替指针，称之为 Entity-Component-System
+
+2.15 【今日阅读】https://useadrenaline.com/ 
+
+* Client-side intelligence (e.g. static code analysis) could be used to build a better prompt for GPT-3.
+* Instead of simply explaining your error, Adrenaline should provide chain-of-thought reasoning for how it fixed the error.
+* In addition to chain-of-thought reasoning, Adrenaline could provide a ChatGPT-style assistant to answer questions about your error. I can even see Adrenaline being repurposed as a "coding tutor" for beginners.
+* Creating a VSCode extension that does this would eliminate the friction of copy-pasting your code and error message into the site.
+
+2.14 【今日阅读】http://www.righto.com/2023/02/silicon-reverse-engineering-intel-8086.html You might expect flags to be a simple part of a CPU, but the 8086's flags are surprisingly complex. About 1/3 of the ALU is devoted to flag computation and storage. Each flag is implemented with completely different circuitry. The 8086 is a CISC processor (Complex Instruction Set Computer), where the instruction set is designed to be powerful and to minimize the gap between machine language and high-level languages.15 This can be seen in the implementation of the flags, which are full of special cases to increase their utility with different instructions.
+
 2.13 【今日阅读】https://en.m.wikipedia.org/wiki/Heisenbug In computer programming jargon, a heisenbug is a software bug that seems to disappear or alter its behavior when one attempts to study it.
 
 2.12 【今日阅读】https://www.rapitasystems.com/blog/what-really-happened-software-mars-pathfinder-spacecraft The Mars Pathfinder spacecraft experienced a series of total system resets due to a priority inversion caused by a long-running communications task. Engineers were able to diagnose and fix the problem by turning on a boolean parameter that indicates whether priority inheritance should be performed by the mutex. This was made possible by the presence of a C language interpreter in the system, which allowed them to upload a short C program to the spacecraft. The solution to the problem was first identified in a paper by L. Sha, R. Rajkumar, and J. P. Lehoczky in 1990, and all three authors were present at the keynote address where the story was told. This story highlights the importance of detailed traces of system behavior for diagnosing problems, as well as the value of having debugging facilities in the system.
