--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,39 @@
+3.12 【今日阅读】https://www.youtube.com/watch?v=_ahvzDzKdB0
+
+* A language should be designed not by a few experts, but by a community of users who can grow and adapt it to their needs.
+* A language should have a small core of powerful features that can be composed and extended to create new features. This way, users can define their own abstractions and libraries without relying on the language designers.
+* A language should support multiple paradigms and styles of programming, such as object-oriented, functional, imperative, declarative, etc. This allows users to choose the best tools for each problem domain and express their ideas more clearly and concisely.
+* A language should be consistent and coherent in its syntax and semantics. It should avoid arbitrary restrictions and special cases that make it hard to learn and use. It should also avoid unnecessary complexity and redundancy that make it hard to read and maintain.
+
+3.11 【今日阅读】https://lobste.rs/s/uo3sck/what_good_debugger_can_do What a good debugger can do
+
+3.10 【今日阅读】https://www.philipotoole.com/what-i-learned-from-programming-a-database/ 
+If there was one piece of advice I would give to fellow developers looking to improve their programming ability, it would be to become part of a database development team.
+
+3.9 【今日阅读】https://github.com/gtramontina/ooze Mutation testing is a technique used to assess the quality and coverage of test suites. It involves introducing controlled changes to the code base, simulating common programming mistakes. These changes are, then, put to test against the test suites. A failing test suite is a good sign. It indicates that the tests are identifying mutations in the code—it "killed the mutant". If all tests pass, we have a surviving mutant. This highlights an area with weak coverage. It is an opportunity for improvement.
+
+3.8 【今日阅读】https://marcellerusu.com/your_client_side_state_is_a_lie.html The link you provided is a blog post by Marcel Rusu, who challenges the common practice of client-side state management in web development. He claims that client-side state is a lie because it is always derived from some source of truth, such as the server or the user input. He argues that client-side state management introduces unnecessary complexity, inconsistency and bugs, and that it should be replaced by a simpler approach based on declarative rendering and server-side state.
+
+3.7 【今日阅读】https://blog.polybdenum.com/2023/03/05/fixing-the-next-10-000-aliasing-bugs.html Invariants are essential to large scale programming, because it is impossible to hold the entire state of a system in your head at once. Invariants allow you to focus only on the parts of the code responsible for upholding that invariant, and to just assume it holds elsewhere, thus reducing the combinatorial explosion of the state space and allowing the development of software larger than trivial toy examples.
+
+3.6 【今日阅读】https://useadrenaline.com/playground a chatbot that helps you debug your code
+
+3.5 【今日阅读】 https://b23.tv/KjbDASN 关于"Signals 是不是 Web 框架未来"的梳理和感想(自言自语)
+
+3.4 【今日阅读】https://opensource.googleblog.com/2023/03/introducing-service-weaver-framework-for-writing-distributed-applications.html More importantly, microservices severely impacted our ability to make cross-binary changes. It made us do things like flag-gate new features in each binary, evolve our data formats carefully, and maintain intimate knowledge of our rollout processes. Finally, having a predetermined number of specific microservices effectively froze our APIs; they became so difficult to change that it was easier to squeeze all of our changes into the existing APIs rather than evolve them.
+
+3.3 【今日阅读】https://www.deeplearning.ai/the-batch/issue-180/ Participants who used Codex generally produced code that was less functional and secure, yet they expressed greater confidence in it.
+
+3.2 【今日阅读】https://concerningquality.com/logical-time-determinism/ Recently, Tomorrow Corporation released this video of their in-house tech stack doing some truly awesome time-travel debugging of a production-quality game. You should watch this video, even if you don’t read this post, because the workflow that they’ve created is really inspiring. The creator kept bringing up the fact that the reason their tools can do this is that they have determinism baked into them at the very foundational levels. You simply can’t bolt this on at higher levels in the stack.
+
+This got me thinking - not only do we rarely have this level of control in our projects, but I think it’s rare to even understand how determinism is possible in modern systems that are interactive, concurrent, and distributed.
+
+3.1 【今日阅读】https://hudi.apache.org/blog/2021/07/21/streaming-data-lake-platform Enter Hudi, an incremental framework that supports the above requirements outlined in our previous section. In short, Hudi (Hadoop Upsert Delete and Incremental) is an analytical, scan-optimized data storage abstraction which enables applying mutations to data in HDFS on the order of few minutes and chaining of incremental processing. https://www.uber.com/en-KR/blog/hoodie/
+
+2.28 【今日阅读】https://book.archguard.org/ 在这本《架构治理模式》，将介绍一系列调整现有人员、流程和技术的实践与模式等，使架构符合架构师预期的设想，以最好地帮助架构师交付业务成果。
+
+2.27 【今日阅读】https://www.youtube.com/watch?v=72y2EC5fkcE 融合了录制回放功能的整套开发工具链是怎样的？
+
 2.26 【今日阅读】http://wrigstad.com/oracle/ludvig_thesis.pdf The information saved in the snapshot is only valuable insofar as references
 and pointers will keep their meaning when restored. For many kinds of references and pointers, this is not directly the case. What broad categories do we have, and what solutions exist? The issue is twofold: 1) Are references to each entity valid upon restoring, and 2) If not, can all the references to it be identified and updated?
 
