--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,31 @@
+3.25 【今日阅读】https://tomasp.net/blog/2015/library-frameworks/ To end on a lighter note, you can find frameworks not just in software, but also in ordinary life. If you buy package holidays, you're buying a framework - they transport you to some place, put you in a hotel, feed you and your activities have to fit into the shape provided by the framework (say, go into the pool and swim there). If you travel independently, you are composing libraries. You have to book your flights, find your accommodation and arrange your program (all using different libraries). It is more work, but you are in control - and you can arrange things exactly the way you need.
+
+3.24 【今日阅读】https://boston.conman.org/2023/03/06.1 The reactions to my previous post were interesting—it wasn't a “unit test.” At best, it might have been an “integration test” but because it involved actual work (i.e. interaction with the outside world via nasty nasty side effects, aka I/O) it immediately disqualified it as a “unit test.” And to be honest, I was expecting that type of reaction—it appears to me that most unit test proponents tend to avoid such “entanglements” when writing their “battle tested” code (but I'm also willing to admit that's the cynical side of me talking). There were also comments about how 100% code coverage was “unrealistic.”
+
+Sigh.
+
+3.23 【今日阅读】https://lobste.rs/s/fjb8ch/why_people_misuse_inheritance “laziness” isn’t really a good way to analyze these sorts of things. When programmers are being “lazy” they’re just doing what their tools guide them to doing. We can and should modify these tools so that the “lazy” solution is correct rather than try to fix programmers.
+
+3.22 【今日阅读】https://serce.me/posts/21-03-2023-write-predictable-software-not-ergonomic The issue with how many APIs are designed is that they make it harder to opt-in for predictable behaviour. Let's consider the connection pool example again. Setting max while omitting min rarely makes sense, yet that’s how many APIs work. If you want to make your application predictable, you often have to configure max to the same value as min - something that’s very easy to overlook. A safe API that follows the above patterns forces you to consider the environment in which your software will be running and helps to make an appropriate choice. When the setMaximumPoolSize example from the beginning of the article is rewritten in this paradigm, it switches from an ambiguous statement into a line that clearly signals its intention.
+
+3.21 【今日阅读】https://deno.com/blog/package-json-support The latest release of Deno introduced a significant change: providing enhanced Node and NPM compatibility through package.json support. 革命者投降了
+
+3.20 【今日阅读】https://tigerbeetle.com/blog/a-database-without-dynamic-memory/ Building a system that allocates memory once up-front requires up-front thinking. For many developers (like myself) it is a big adjustment. But as we’ve found: you spend just a few weeks thinking through the memory you need, and it pays off massively over time.
+
+3.19 【今日阅读】https://tratt.net/laurie/blog/2023/rusts_two_kinds_of_assert_make_for_better_code.html Rust's distinction between `assert!` and `debug_assert!` macros is a useful feature that helps programmers write better code. The author explains that `assert!` checks a condition at runtime and panics if it fails, while `debug_assert!` only checks the condition in debug mode and does nothing in release mode. This allows programmers to use `assert!` for conditions that must always hold (such as invariants) and `debug_assert!` for conditions that are only relevant for debugging (such as preconditions and postconditions)
+
+3.18 【今日阅读】https://balintreczey.hu/blog/how-to-speed-up-your-next-build-with-firebuild/ Firebuild intercepts all processes started by the command to cache their outputs. Next time when the command or any of its descendant commands is executed with the same parameters, inputs and environment, the outputs are replayed (the command is shortcut) from the cache instead of running the command again.
+
+3.17 【今日阅读】https://www.bolddata.org/blog/python-tdd-with-chatgpt/ The post explores how to use ChatGPT, a language model that can generate Python code, with test-driven development (TDD), a software development process that relies on writing tests before writing code. The post shows how ChatGPT can pass some simple tests, but also fails at some more complex ones. The post concludes that ChatGPT is not yet ready for production use, but it is a promising tool for prototyping and learning.
+
+3.16 【今日阅读】https://zhuanlan.zhihu.com/p/614341278 基于 GPT-4 / vscode 的重构工具方案，以及本地部署大语言模型方案
+
+3.15 【今日阅读】https://github.com/rustymagnet3000/lldb_debugger Helpful commands when using lldb
+
+3.14 【今日阅读】https://www.youtube.com/watch?v=NAVbI1HIzCE we’re going to take a small piece of code and convert it through several versions, from a full Object Oriented implementation with the data scattered around, to a Data Oriented Design version where the data is well organized
+
+3.13 【今日阅读】https://www.rubick.com/steel-threads/ what Steel Threads are and how they can help engineers design better systems. Steel Threads are a way of building a minimal end-to-end implementation of a feature or functionality, without worrying about the details or quality of each component. The idea is to create a working prototype that can be tested and improved iteratively, rather than spending a lot of time on planning and designing each part separately. Steel Threads can help engineers avoid integration problems, reduce complexity, and deliver value faster.
+
 3.12 【今日阅读】https://www.youtube.com/watch?v=_ahvzDzKdB0
 
 * A language should be designed not by a few experts, but by a community of users who can grow and adapt it to their needs.
