--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,43 @@
+4.14 【今日阅读】https://devblogs.microsoft.com/cppblog/cmake-debugger-allows-you-to-debug-your-cmake-scripts-and-more/ 看了 cmake 的 debugger，不禁怀疑为什么需要 cmake，它并没有通过一门叫 cmake 的语言约束使得调试体验更好啊。
+
+4.13 【今日阅读】https://spritely.institute/news/introducing-a-distributed-debugger-for-goblins-with-time-travel.html Debugging distributed programs is difficult, but we’ve been hard at work developing tools to make it easier
+
+4.12 【今日阅读】https://buttondown.email/hillelwayne/archive/i-really-like-powershell/ You can also add new providers, which makes it possible to do things like mount a json file as a drive and modify it like it was a filesystem.
+
+4.11 【今日阅读】https://lobste.rs/s/f61udz/modular_errors_with_rust_s_thiserror in a library, taking a proc macro dependency significantly restructures compilation graph for your consumer, and you, as a library, don’t want to force that. libraries should work hard on protecting their own abstractions. not a fan of using From even in applications, as it makes it harder to grep for origins of errors
+
+4.10 【今日阅读】https://lobste.rs/s/pvrcob/on_endings_why_how_we_retired_elm_at So basically, “the benefits of using Elm didn’t weigh enough against the costs of integrating Elm with other systems”? Seems to me like a pretty decent example of why “Pinky & The Brain” systems seldom go anywhere
+
+4.9 【今日阅读】https://v8.dev/blog/wasm-tail-call We are shipping WebAssembly tail calls in V8 v11.2! In this post we give a brief overview of this proposal, demonstrate an interesting use case for C++ coroutines with Emscripten, and show how V8 handles tail calls internally.
+
+4.8 【今日阅读】https://lobste.rs/s/b0fkuh/build_faster_with_buck2_our_open_source Build faster with Buck2: Our open source build system
+
+4.7 【今日阅读】https://lukeplant.me.uk/blog/posts/the-different-uses-of-python-type-hints/ When you use type hints in Python, you could be using them for one or more of at least 5 different things
+
+4.6 【今日阅读】https://betterprogramming.pub/graphql-from-excitement-to-deception-f81f7c95b7cf Disclaimer: GraphQL is trendy, and you will find countless articles about how it’s amazing, but after three years of using it, I am a bit bitter and disappointed by the technology, so don’t take my words for granted.
+
+4.5 【今日阅读】https://github.com/jordanlewis/gcassert gcassert is a program for making assertions about compiler decisions in Go programs, via inline comment directives like //gcassert:inline.
+
+4.4 【今日阅读】https://blog.testdouble.com/posts/2023-04-03-never-staff-to-the-peak/ Regardless of whether additional complexity is essential (valuable) or incidental (waste), all complexity adds to the carrying cost of software. As a result, doing low-priority work costs the business twice: paying people to build things it doesn’t need, sure, but also paying higher maintenance costs on the existing things it really did need. That’s because, as as is often forgotten: as complexity goes up, maintenance costs increase in super-linear proportion!
+
+4.3 【今日阅读】https://github.com/dominikh/gotraceui Gotraceui is a tool for visualizing and analyzing Go execution traces. It is meant to be a faster, more accessible, and more powerful alternative to go tool trace. Unlike go tool trace, Gotraceui doesn’t use deprecated browser APIs (or a browser at all), and its UI is tuned specifically to the unique characteristics of Go traces.
+
+4.2 【今日阅读】https://www.maxcountryman.com/articles/value-modes-and-mud-balls As an industry, we've become accustomed to methodologies that yield iterative value, be it Agile or other similar approaches. This tends to work exceptionally well for problem spaces where accretion is an effective way forward. For example, landing page optimization can be as simple as changing some variables, running tests and observing the results, then rolling out the ones with statistically significant outcomes. However, adding more mud onto an already established ball only leaves you with a larger ball of mud.
+
+4.1 【今日阅读】https://lobste.rs/s/u7y4lk/modules_matter_most_for_masses what matters in the module system for programming in the large 
+
+3.31 【今日阅读】https://lobste.rs/s/icbyfz/type_system_fortnite_s_verse_language We see ourselves at the very beginning of a 2 or 3 year process of rewriting all of the game play logic of Fortnite Battle Royale (which is now C++) in Verse…
+
+3.30 【今日阅读】https://zhuanlan.zhihu.com/p/617818350 ChatGPT 处理小脚本很容易，你直接把脚本都复制粘贴进去，然后告诉 ChatGPT 我要什么就可以了。和拜佛许愿没啥区别。那么如何应用到大型代码仓库上呢？
+
+3.29 【今日阅读】https://lobste.rs/s/xpotym/praise_vite Webpack was written by astronaut architects who were obsessed with making things possible but not with actually solving problems. In practice, it meant that even though no one actually has interesting bundling requirements, everyone ends up writing their own bundling logic for some reason. Parcel and ESBuild also got this right.
+
+3.28 【今日阅读】https://loige.co/the-senior-dev/ The Definition of Senior: A Look at the expectations for Software Engineers
+
+3.27 【今日阅读】https://zhuanlan.zhihu.com/p/616860260 ChatGPT 的 4000 个 token 上下文不够用怎么办？关于这个主题有一篇更详细的学术 survey https://arxiv.org/pdf/2302.07842.pdf
+
+3.26 【今日阅读】https://tweedegolf.nl/en/blog/88/data-oriented-design DoD is commonly used in game programming, where runtime speed defines what is possible. Recently it's seen more use in other domains, for instance in the Zig and Rust compilers, and projects that focus on runtime speed like Mold and Bun.
+
 3.25 【今日阅读】https://tomasp.net/blog/2015/library-frameworks/ To end on a lighter note, you can find frameworks not just in software, but also in ordinary life. If you buy package holidays, you're buying a framework - they transport you to some place, put you in a hotel, feed you and your activities have to fit into the shape provided by the framework (say, go into the pool and swim there). If you travel independently, you are composing libraries. You have to book your flights, find your accommodation and arrange your program (all using different libraries). It is more work, but you are in control - and you can arrange things exactly the way you need.
 
 3.24 【今日阅读】https://boston.conman.org/2023/03/06.1 The reactions to my previous post were interesting—it wasn't a “unit test.” At best, it might have been an “integration test” but because it involved actual work (i.e. interaction with the outside world via nasty nasty side effects, aka I/O) it immediately disqualified it as a “unit test.” And to be honest, I was expecting that type of reaction—it appears to me that most unit test proponents tend to avoid such “entanglements” when writing their “battle tested” code (but I'm also willing to admit that's the cynical side of me talking). There were also comments about how 100% code coverage was “unrealistic.”
